added load_users_by_string endpoint
